1.5/_sources/modules/generated/sklearn.feature_selection.RFECV.rst.txt
RFECV
=====

.. currentmodule:: sklearn.feature_selection

.. autoclass:: RFECV
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.feature_selection.RFECV sklearn.feature_selection.RFECV.__init__ sklearn.feature_selection.RFECV.decision_function sklearn.feature_selection.RFECV.fit sklearn.feature_selection.RFECV.fit_transform sklearn.feature_selection.RFECV.get_feature_names_out sklearn.feature_selection.RFECV.get_metadata_routing sklearn.feature_selection.RFECV.get_params sklearn.feature_selection.RFECV.get_support sklearn.feature_selection.RFECV.inverse_transform sklearn.feature_selection.RFECV.predict sklearn.feature_selection.RFECV.predict_log_proba sklearn.feature_selection.RFECV.predict_proba sklearn.feature_selection.RFECV.score sklearn.feature_selection.RFECV.set_fit_request sklearn.feature_selection.RFECV.set_output sklearn.feature_selection.RFECV.set_params sklearn.feature_selection.RFECV.transform 
   :add-heading: Gallery examples
   :heading-level: -